# entroprisal

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: usage_examples.ipynb
src/entroprisal/: __init__.py  character_entroprisal.py  corpus_processor.py  rest_of_word_entroprisal.py  token_entroprisal.py  utils.py
src/entroprisal/data/: __init__.py
tests/: __init__.py  test_character_entroprisal.py  test_data_download.py  test_rest_of_word_entroprisal.py  test_token_entroprisal.py  test_utils.py
